--- a/src/TemplateBuilder/TemplateBuilder.csproj
+++ b/src/TemplateBuilder/TemplateBuilder.csproj
@@ -41,6 +41,8 @@
   <ItemGroup>
     <Compile Include="ChildWizard.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="MultiProjectRootWizard.cs" />
+    <Compile Include="WizardBase.cs" />
     <Compile Include="RootWizard.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
